--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Bier-v1</display-name>
+  
+  <welcome-file-list> 
+                <!-- Use index.swf if present, or splash.jsp, otherwise just look for the normal defaults --> 
+                <welcome-file>index.swf</welcome-file> 
+                <welcome-file>splash.jsp</welcome-file> 
+                <welcome-file>form.html</welcome-file> 
+                <welcome-file>index.htm</welcome-file> 
+                <welcome-file>index.jsp</welcome-file> 
+  </welcome-file-list> 
+  
   <servlet>
     <servlet-name>Kap03 Bier</servlet-name>
     <servlet-class>com.example.web.BierAuswahl</servlet-class>
